/*
Main Control Protocol
- Android App(gRPC client) -> Main Server(gRPC server)
- Edge Controller(gRPC client) -> Main Server(gRPC server)
*/

syntax = "proto3";

option go_package = "github.com/dinobei/idl/bacs/maincontrol";
option java_multiple_files = true;
option java_package = "net.ijoon.bacs.main_control";
option java_outer_classname = "MainControlProto";

package maincontrol;

service MainControl {
  rpc AddRegisterer(AddRegistererRequest) returns (AddRegistererResponse) {}
  rpc UpdateRegisterer(UpdateRegistererRequest) returns (UpdateRegistererResponse) {}
  rpc DeleteRegisterer(DeleteRegistererRequest) returns (DeleteRegistererResponse) {}
  rpc GetRegisterer(GetRegistererRequest) returns (GetRegistererResponse) {}
  rpc GetRegistererList(GetRegistererListRequest) returns (GetRegistererListResponse) {}

  // rpc AddBarn(AddBarnRequest) returns (AddBarnResponse) {}
  // rpc UpdateBarn(UpdateBarnRequest) returns (UpdateBarnResponse) {}
  // rpc DeleteBarn(DeleteBarnRequest) returns (DeleteBarnResponse) {}
  rpc GetBarn(GetBarnRequest) returns (GetBarnResponse) {}
  rpc GetBarnList(GetBarnListRequest) returns (GetBarnListResponse) {}

  rpc GetAccessLog(GetAccessLogRequest) returns (GetAccessLogResponse) {}

  // 사용자가 앱에서 서버에게 OpenGate 요청
  rpc OpenGateFromApp(OpenGateFromAppRequest) returns (OpenGateFromAppResponse) {}

  // 엣지에서 번호판 인식 후 서버에게 Access 요청
  rpc Access(AccessRequest) returns (AccessResponse) {}
}

enum RegistererStatus {
  REGISTERER_STATUS_UNSPECIFIED = 0; // 상태정의 안한 경우 (default)
  REGISTERER_STATUS_NOT_REGISTERED = 1; // 미등록 상태(차단기 통행 불가)
  REGISTERER_STATUS_REGISTERED = 2; // 등록된 상태(차단기 통행 가능)
  REGISTERER_STATUS_BLOCKED = 3; // 등록된 상태(차단기 통행 불가)
}
// 축사 등록자 명부
message Registerer {
  uint64 id = 1;
  uint64 barn_id = 2;
  string name = 3;
  string plate_number = 4;
  string phone_number = 5;
  string register_time = 6;
  RegistererStatus status = 7;
  string note = 8;
}


enum BarnStatus {
  BARN_STATUS_UNSPECIFIED = 0;
  BARN_STATUS_SAFE = 1;
  BARN_STATUS_UNSAFE = 2;
}
// 축사 정보
message Barn {
  uint64 id = 1;
  string name = 2;
  string address = 3;
  double latitude = 4;
  double longitude = 5;
  string phone_number = 6;
  string register_time = 7;
  string owner_name = 8;
  string owner_phone_number = 9;
  BarnStatus status = 10;
  string note = 11;
  string controller_serial = 12;
  string controller_version = 13;
}


// 사용자 등록
message AddRegistererRequest {
  Registerer registerer = 1;
}
message AddRegistererResponse {

}


//사용자 정보 수정
message UpdateRegistererRequest {
  Registerer registerer = 2;
}
message UpdateRegistererResponse {
}


//사용자 삭제
message DeleteRegistererRequest {
  uint64 registerer_id = 1;
}
message DeleteRegistererResponse {
}


// 사용자 가져오기
message GetRegistererRequest {
  uint64 registerer_id = 1;
}
message GetRegistererResponse {
  Registerer registerer = 1;
}


//축사 별 사용자 리스트 가져오기
message GetRegistererListRequest {
  uint64 barn_id = 1;
}
message GetRegistererListResponse {
  repeated Registerer registerer_list = 1;
}


// 축사 정보 획득
message GetBarnRequest {
  uint64 barn_id = 1;
}
message GetBarnResponse {
  Barn barn = 1;
}


// 축사 목록 획득
message GetBarnListRequest {
}
message GetBarnListResponse {
  repeated Barn barn_list = 1;
}


// 축사 로그 획득
// 내 축사에 누가 언제 들어왔었는지 획득
message GetAccessLogRequest {
  uint64 barn_id = 1;
}
message GetAccessLogResponse {
  repeated AccessLog access_log = 1;
}
message AccessLog {
  uint64 barn_id = 1;
  string plate_number = 2;
  string access_time = 3;
  bool is_opened = 4;
  string note = 5;
}


// 사용자가 앱에서 축사 문열어달라고 요청하는 메시지
message OpenGateFromAppRequest {
  uint64 barn_id = 1;
}
message OpenGateFromAppResponse {
}

// 엣지에서 번호판 인식 후 열어달라고 요청하는 메시지
message AccessRequest {
  string controller_serial = 1;
  string plate_number = 2;
  bytes image = 3;
}
message AccessResponse {
  bool open = 1;
}